--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "axios": "^0.21.1",
+    "express": "^4.17.1",
     "if-env": "^1.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -16,10 +17,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "cd client && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "install": "cd client && npm install",
     "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
